// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accent button example 1`] = `
"<b-button color=\\"accent\\">
        <button>
            Accent button
        </button>
    </b-button>"
`;

exports[`Primary button example 1`] = `
"<b-button color=\\"primary\\">
        <button>
            Default button
        </button>
    </b-button>"
`;
